--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,7 @@ text-align: right;
 /* ///////////// footer //////////// */
 footer p{
   padding: 0;
-  margin: 0;
+  margin: 0px;
 }
 
 /* ////////////// Responsive Code ///////////// */
